--- a/stylesensalada.css
+++ b/stylesensalada.css
@@ -39,7 +39,7 @@ nav {
 }
 
 .hero-header {
-  background-image: url("../imagenes/banner2.jpg");
+  background-image: url("./imagenes/banner2.jpg");
   background-size: cover;
   background-position: right center;
   color: #ffffff;
